# python-quickstarts

./: .gitignore  README.md
basics/: 0_py_crash_course.py  python_101.py
coding_patterns/: fast_slow_pointers.py  in_place_reversal.py  monotonic_stack.py  prefix_sum_pattern.py  sliding_window_pattern.py  two_pointers_pattern.py
problems/: .env  check_json_against_schema.py  check_palindrome.py  excel_update.py  find_email.py  get_env.py  get_primes.py  get_substr_uniq_char.py  pattern_sum.py  requirements.txt
py_project/pyprojectdemo/: README.md  pyproject.toml
tips/: script.py
w3_schools/: 0_get_started.py
